force-app/main/default/objects/Github_API__c/Github_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Github API</label>
</CustomObject>