force-app/main/default/objects/Github_API__c/fields/Allow_Changes_From_S3SalesforceUser__c.field-meta.xml
<CustomField>
    <fullName>Allow_Changes_From_S3SalesforceUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn off or turn on S3SalesforceUser ability to use Webhook.</description>
    <label>Allow Changes From S3SalesforceUser</label>
    <type>Checkbox</type>
</CustomField>