force-app/main/default/objects/Github_API__c/fields/Enable_GitHub_Webhook_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_GitHub_Webhook_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable GitHub Webhook Trigger</label>
    <type>Checkbox</type>
</CustomField>