force-app/main/default/objects/Github_API__c/fields/Enable_TaskRay_Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_TaskRay_Task_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable TaskRay Task Trigger</label>
    <type>Checkbox</type>
</CustomField>